fix classname guide-wrap

--- a/resource/css/sass/trisoap.scss
+++ b/resource/css/sass/trisoap.scss
@@ -1208,7 +1208,7 @@ $buy-now-btn-width: 44%;
  * -------------------------------------------------------------------------
  */
 
-#guide {
+#guide-wrap {
 	@extend .main-wrap;
 	color: $main-font-color;
 }
